[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunkapplib"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "splunk-sdk",
  "splunktaucclib",
  "solnlib",
]

[tool.hatch.envs.default]
python = "3.9"
dependencies = [
  "splunk-add-on-ucc-framework",
  "ruff",
  "pytest",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check src"
fmt = "ruff format src"
fix = "ruff check --fix src && ruff format src"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.pylance]
typeCheckingMode = "standard"